hphp/test/zend/good/Zend/tests/anon/003.php
<?php
while (@$i++<10) {
    var_dump(new class($i) {
        public function __construct($i) {
            $this->i = $i;
        }
    });
}
